// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note Component Renders default state 1`] = `
<div
  className="Note"
>
  <div
    className="top"
  >
    <h2>
      _
    </h2>
  </div>
  <div
    className="bottom"
  >
    <span>
      Date modified on 
      01-01-2020
    </span>
    <button
      onClick={[Function]}
    >
      Delete Note
    </button>
  </div>
</div>
`;

exports[`Note Component Renders state with note name 1`] = `
<div
  className="Note"
>
  <div
    className="top"
  >
    <h2>
      Dogs
    </h2>
  </div>
  <div
    className="bottom"
  >
    <span>
      Date modified on 
      01-01-2020
    </span>
    <button
      onClick={[Function]}
    >
      Delete Note
    </button>
  </div>
</div>
`;
